crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_include_file_with_different_formatting_and_applies_the_first_one.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "overrides": [
    {
      "include": ["special/**"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "off"
          }
        }
      }
    },
    {
      "include": ["special/**"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "error"
          }
        }
      }
    }
  ]
}
```

## `special/test2.js`

```js
debugger
```

## `test.js`

```js

```

# Emitted Messages

```block
Fixed 2 file(s) in <TIME>
```


