crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_include_file_with_different_linting_and_applies_all_of_them.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe test.js special/test2.js
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["special/**"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "off"
          }
        }
      }
    },
    {
      "includes": ["special/**"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "error"
          }
        }
      }
    }
  ]
}
```

## `special/test2.js`

```js


```

## `test.js`

```js


```

# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 2 files.
```
