crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_merge_all_overrides.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint .
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "error"
      }
    }
  },
  "overrides": [
    {
      "includes": ["*.js"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "warn"
          }
        }
      }
    },
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "suspicious": {
            "noDebugger": "off"
          }
        }
      }
    },
    {
      "includes": ["test3.js"]
    }
  ]
}
```

## `test.js`

```js
debugger;

```

## `test2.js`

```js
debugger;

```

## `test3.js`

```js
debugger;

```

# Emitted Messages

```block
test2.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This is an unexpected use of the debugger statement.
  
  > 1 │ debugger;
      │ ^^^^^^^^^
    2 │ 
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;
      │ ---------

```

```block
test3.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This is an unexpected use of the debugger statement.
  
  > 1 │ debugger;
      │ ^^^^^^^^^
    2 │ 
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;
      │ ---------

```

```block
Checked 4 files in <TIME>. No fixes applied.
Found 2 warnings.
```
