crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_not_change_linting_settings.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe test.js test2.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "off"
      }
    }
  },
  "overrides": [{ "includes": ["test.js"], "formatter": { "enabled": false } }]
}
```

## `test.js`

```js
debugger;

```

## `test2.js`

```js
debugger;

```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
