crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_not_handle_ignored_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "include": ["test.js", "special/**"]
  },
  "overrides": [{ "ignore": ["special/**"] }]
}
```

## `special/test2.js`

```js
(1 >= -0)
```

## `test.js`

```js
(1 >= 0)
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


