crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_override_groupe_recommended.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe .
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "preset": "recommended"
      }
    }
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "suspicious": {
            "preset": "none"
          }
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger;

```

## `test2.js`

```js


```

# Emitted Messages

```block
Checked 3 files in <TIME>. Fixed 1 file.
```
