crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_preserve_group_recommended_when_override_global_recommended.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe .
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "preset": "none"
      }
    }
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "preset": "recommended"
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger;

```

## `test2.js`

```js
debugger;

```

# Emitted Messages

```block
Checked 3 files in <TIME>. No fixes applied.
```
